--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 				<a href="https://volunteermalaysia.com" class="btn btn-primary">Learn More</a>
 		</div>
 		<div class="col-lg-6">
-			<img src="img/1.png" class="img-fluid zoom-img img-border">
+			<img src="1.png" class="img-fluid zoom-img img-border">
 		</div>
 	</div>
 </div>
