--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
 		</div>
 		<div class="col-lg-6">
-			<img src="img/1.png" class="img-fluid zoom-img img-border">
+			<img src="1.png" class="img-fluid zoom-img img-border">
 		</div>
 	</div>
 	<hr class="my-4">
